#3 Реализовал отправку сообщение - работает через Ajax запрос - подключил доп файл JS moment для форматирования времени - добавил доп класс в AccountService для поиска по имени без асинхронности - реализовал конроллер для управления чатом, реализовал сервисы и ститчные классы Extension для приведения одних млделей в другие - реализовал скрипт отправляющий и получающий запрос от серва на добавление коммента - попровил верстку

--- a/MyChat/MyChat.csproj
+++ b/MyChat/MyChat.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml" />
       <_ContentIncludedByDefault Remove="Views\Home\Privacy.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Shared\Chats\CommonChat.cshtml" />
     </ItemGroup>
 
     <ItemGroup>
@@ -19,6 +20,10 @@
       </PackageReference>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
       <PackageReference Include="SixLabors.ImageSharp" Version="3.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <AdditionalFiles Include="Views\Chats\CommonChat.cshtml" />
     </ItemGroup>
 
 </Project>
